--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#header">سەرەکی <span class="sr-only">(current)</span></a>
+                 <li class="nav-item">
+                    <a class="nav-link page-scroll" href="index.html">سەرەکی <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="bash.html">بەشەکان</a>
@@ -70,7 +70,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="ragraty.html"><span style="font-family:'K24KurdishBold-Bold'; class="item-text">راگرایەتی</span></a>
                         <div class="dropdown-items-divide-hr"></div>
-                        <a class="dropdown-item" href=""><span style="font-family:'K24KurdishBold-Bold'; class="item-text">رر</span></a>
+                        <a class="dropdown-item" href="psear.html"><span style="font-family:'K24KurdishBold-Bold'; class="item-text">دامەزراندن</span></a>
                     </div>
                 </li>
 				
