--- a/bash.html
+++ b/bash.html
@@ -117,7 +117,7 @@
 
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
+                  <li class="nav-item">
                     <a class="nav-link page-scroll" href="index.html">سەرەکی <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
@@ -126,18 +126,14 @@
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="renmay.html">رێنمایەکان</a>
                 </li>
-             
-
-                <!-- Dropdown Menu -->          
-                <li class="nav-item dropdown">
+				 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle page-scroll" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false"> بەشەکانی تر</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="ragraty.html"><span style="font-family:'K24KurdishBold-Bold'; class="item-text">راگرایەتی</span></a>
                         <div class="dropdown-items-divide-hr"></div>
-                        <a class="dropdown-item" href=""><span style="font-family:'K24KurdishBold-Bold'; class="item-text">رر</span></a>
+                        <a class="dropdown-item" href="psear.html"><span style="font-family:'K24KurdishBold-Bold'; class="item-text">دامەزراندن</span></a>
                     </div>
                 </li>
-                <!-- end of dropdown menu -->
 
                
             </ul>
