--- a/lezhna.html
+++ b/lezhna.html
@@ -173,7 +173,7 @@ tr:nth-child(even) {
    
   </tr>
   <tr>
-    <td><a href="tel:+106" style="text-decoration:none; color: black;">١٠٦</a></td>
+    <td><a href="tel:+066 106" style="text-decoration:none; color: black;">١٠٦</a></td>
     <td>ئاسایش</td>
     <td>١</td>
     
