--- a/lezhna.html
+++ b/lezhna.html
@@ -179,28 +179,28 @@ tr:nth-child(even) {
     
   </tr>
     <tr>
-   <td><a href="tel:+122" style="text-decoration:none; color: black;">١٢٢</a></td>
+   <td><a href="tel:122" style="text-decoration:none; color: black;">١٢٢</a></td>
     <td>فریاکەوتن</td>
     <td>٢</td>
     
   </tr>
     <tr>
-    <td><a href="tel:+188" style="text-decoration:none; color: black;">١٨٨</a></td>
+    <td><a href="tel:188" style="text-decoration:none; color: black;">١٨٨</a></td>
     <td>هاتووچۆ</td>
 	<td>٣</td>
   </tr>
    <tr>
-   <td><a href="tel:+104" style="text-decoration:none; color: black;">١٠٤</a></td>
+   <td><a href="tel:104" style="text-decoration:none; color: black;">١٠٤</a></td>
     <td>پۆلیس</td>
 	<td>٤</td>
   </tr>
    <tr>
-    <td><a href="tel:+115" style="text-decoration:none; color: black;">١١٥</a></td>
+    <td><a href="tel:115" style="text-decoration:none; color: black;">١١٥</a></td>
     <td>ئاگر کوژێنەوە</td>
 	<td>٥</td>
   </tr>
    <tr>
-    <td><a href="tel:+119" style="text-decoration:none; color: black;">١١٩</a></td>
+    <td><a href="tel:107" style="text-decoration:none; color: black;">١١٩</a></td>
     <td>توندوتیژی دژی ژنان</td>
 	<td>٦</td>
   </tr>
