--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                     <h3 style="text-align:center; line-height: 2;"><span >پەیوەندیمان پێوەبکەن</span></h3>
                     <ul class="list-unstyled li-space-lg">
                         <li> <span> <a class="turquoise" href="https://goo.gl/maps/ArKhYP284NF6299G8">دێلزیان، سۆران &nbsp; <i class="fas fa-map-marker-alt"></a></i></li>
-                        <li> <span><a class="turquoise" href="tel:+6494461709">65674 &nbsp; <i class="fas fa-phone"></a></i></li>
+                        <li> <span><a class="turquoise" href="tel:+964750">0750 &nbsp; <i class="fas fa-phone"></a></i></li>
                         <li><a class="turquoise" href="mailto:diyarjoolla@gmail.com"> diyarjoolla@gmail.com &nbsp;<i class="fas fa-envelope"></a></i></li>
                         <li class="turquoise"> 9:00 AM - 6:00 PM &nbsp;<i class="fas fa-clock"></i></li>
                     </ul>
