--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Create a stylish landing page for your business startup and get leads for the offered services with this HTML landing page template.">
+    <meta name="description" content="soran technical college,sorantechnicalcollege,sorantechnicalInstitute,soran technical Institute">
     <meta name="author" content="Inovatik">
 	<meta property="og:site_name" content="soran technical college" /> 
-	<meta property="og:site" content="" />  
+	<meta property="og:site" content="soran technical college" />  
 	<meta property="og:title" content="کۆلێژی تەکنیکی سۆران"/>  
-	<meta property="og:description" content="کۆلێژی تەکنیکی سۆران" /> 
+	<meta property="og:description" content="soran technical college,sorantechnicalcollege,sorantechnicalInstitute,soran technical Institute" /> 
 	<meta property="og:image" content="" /> 
-	<meta property="og:url" content="" /> 
+	<meta property="og:url" content="https://www.sorantechnicalcollege.tk" /> 
 	<meta property="og:type" content="article" />
 	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.2/css/bulma.min.css'>
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.css'>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.css'><link rel="stylesheet" href="./style.css">
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.css'>
+	<link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <title>کۆلێژی تەکنیکی سۆران</title>
 
