--- a/bash.html
+++ b/bash.html
@@ -3,16 +3,15 @@
 <head>
      <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Soran Technical College is a website dedicated to students to manage their work and receive guidance on the departments , created by Ibrahim Qadir Mustafa">
-    <meta name="author" content="Soran Technical College">
+    <meta name="description" content="soran technical college,sorantechnicalcollege,sorantechnicalInstitute,soran technical Institute">
+    <meta name="author" content="Inovatik">
 	<meta property="og:site_name" content="soran technical college" /> 
-	<meta property="og:site" content="" />  
+	<meta property="og:site" content="soran technical college" />  
 	<meta property="og:title" content="کۆلێژی تەکنیکی سۆران"/>  
-	<meta property="og:description" content="Soran Technical College is a website dedicated to students to manage their work and receive guidance on the departments , created by Ibrahim Qadir Mustafa" /> 
+	<meta property="og:description" content="soran technical college,sorantechnicalcollege,sorantechnicalInstitute,soran technical Institute" /> 
 	<meta property="og:image" content="" /> 
-	<meta property="og:url" content="" /> 
+	<meta property="og:url" content="https://www.sorantechnicalcollege.tk" /> 
 	<meta property="og:type" content="article" />
-	
     <title>کۆلێژی تەکنیکی سۆران</title>
 
     <link href="css/bootstrap.css" rel="stylesheet">
