--- a/404.html
+++ b/404.html
@@ -1,3 +1,52 @@
 ---
 permalink: /404.html
 ---
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="soran technical college,sorantechnicalcollege,sorantechnicalInstitute,soran technical Institute">
+    <meta name="author" content="Inovatik">
+	<meta property="og:site_name" content="soran technical college" /> 
+	<meta property="og:site" content="soran technical college" />  
+	<meta property="og:title" content="کۆلێژی تەکنیکی سۆران"/>  
+	<meta property="og:description" content="soran technical college,sorantechnicalcollege,sorantechnicalInstitute,soran technical Institute" /> 
+	<meta property="og:image" content="" /> 
+	<meta property="og:url" content="https://www.sorantechnicalcollege.tk" /> 
+	<meta property="og:type" content="article" />
+	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.2/css/bulma.min.css'>
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.css'>
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.css'>
+	<link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <title>کۆلێژی تەکنیکی سۆران</title>
+
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/fontawesome.css" rel="stylesheet">
+    <link href="css/swiper.css" rel="stylesheet">
+	<link href="css/magnific-popup.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
+    <link rel="icon" href="images/ff.png">
+	
+	<style>
+     @font-face {
+  font-family: 'K24KurdishBold-Bold';
+  src: url('K24KurdishBold-Bold.woff' ) format('woff2');
+}
+	*{
+	font-family: 'K24KurdishBold-Bold';
+	
+	}
+    p{
+      color : red;
+      font-family: 'K24KurdishBold-Bold';
+      
+    }
+  </style>
+  
+  <body>
+    <p>  ببورە ئەم لاپەرەیە نەدۆزرایەوە </p>
+  </body>
+  </html>
