--- a/404.html
+++ b/404.html
@@ -39,14 +39,58 @@ permalink: /404.html
 	font-family: 'K24KurdishBold-Bold';
 	
 	}
-    p{
+    p {
       color : red;
       font-family: 'K24KurdishBold-Bold';
+	  margin-top: 150px;
+	  font-size: 25px;
+	
+      
+    } 
+	a {
+      color : blue;
+      font-family: 'K24KurdishBold-Bold';
+	  margin-top: 150px;
+	  font-size: 20px;
+	  text-decoration: none;
       
     }
+	.copyright {
+	padding-top: 260px;
+	padding-bottom: 0.375rem;
+	text-align: center;
+	
+}
+
+.copyright .p-small {
+	padding-top: 1.375rem;
+	border-top: 1px solid #c4d8dc;
+	opacity: 0.7;
+}
+.copyright a {
+	text-decoration: none;
+	color: #00a7bd
+}
+
   </style>
   
   <body>
-    <p>  ببورە ئەم لاپەرەیە نەدۆزرایەوە </p>
+  <center>
+    <p> ⚠️ ببورە ئەم لاپەرەیە نەدۆزرایەوە </p>
+	<br>
+	<span style="font-size:20px;">  بۆ چوون بۆ لاپەرەی سەرەکی </span> <a href="https://www.sorantechnicalcollege.tk">&nbsp; لێرە لێبدە </a>
+
+	   <div class="copyright">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <hr>
+                    <span style="font-size:16px;line-height: 2; color:black;">مافی پارێزراوە بۆ   کۆلێژی تەکنیکی سۆران</span><br>
+                    <span style="font-size:16px; color:black;"> دیزاین <a href="https://www.facebook.com/ibrahimmm55"> : ابراهیم قادر</a></span><br>
+                </div> 
+            </div> 
+        </div> 
+    </div> 
+	</center>
   </body>
   </html>
