--- a/404.html
+++ b/404.html
@@ -78,7 +78,7 @@ permalink: /404.html
   <center>
     <p> ⚠️ ببورە ئەم لاپەرەیە نەدۆزرایەوە </p>
 	<br>
-	<span style="font-size:20px;">  بۆ چوون بۆ لاپەرەی سەرەکی </span> <a href="https://www.sorantechnicalcollege.tk">&nbsp; لێرە لێبدە </a>
+	<span style="font-size:20px; color:black;">  بۆ چوون بۆ لاپەرەی سەرەکی </span> <a href="https://www.sorantechnicalcollege.tk">&nbsp; لێرە لێبدە </a>
 
 	   <div class="copyright">
         <div class="container">
