--- a/bash.html
+++ b/bash.html
@@ -212,7 +212,7 @@
                         <p class="p-large"><strong>بەشی تەکنەلۆجیای زانیاری</strong></p>
                         
                         </div> 
-						<p><span style="float:center; color:blue; margin-left:8px; margin-right:8px; font-size:16px; line-height:1.5rem;"> </p>
+						<p><span style="float:center; color:blue; margin-left:8px; margin-right:8px; font-size:16px; line-height:1.5rem;">ئامانج لێی پێگەیاندنی ستافیکی تەکنیکی و فێربوونی بپرۆگرامەکانی کۆمپیوتەر و زمانەکانی کۆمپیوتەر لە ماوەی خویندنی ئەم دوو سالە قوتابیان دەبنە خاوەن بروانامای دیبلۆم . دەرچوانی ئەم بەشە رۆلێکی گرینگیان هەیە لە بواری دروست کردنی پرۆگرامەکان و کارکردنیان لە کۆمپانیا و کەنالەکان  . قوتابیان لەم سالانەی خونێندیاندا وانەکان بە تیۆریی و پراکتیکی و سەردانی کردنیان بۆ کەنالەکان و کۆلێژە تەکنەلۆژیایەکان . بۆ بە تەکنیکی بونی قوتابی و فیربوون و وەرگرتنی زانیاری زیاتر لە بوارەکەیان . وە ئەنجام دانی خولی مەشقی هاوینەی دوو مانگە دوای تەواوکردنی قوناغی دووەم بۆ  تەواو بوونی پسپۆریان لەم بوارە</p>
 
 						<hr width="80%" color="black">
 						<div class="team-member">
