--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="soran technical college,sorantechnicalcollege,sorantechnicalInstitute,soran technical Institute">
-    <meta name="author" content="Inovatik">
+    <meta name="author" content="ibrahem qadir">
 	<meta property="og:site_name" content="soran technical college" /> 
 	<meta property="og:site" content="soran technical college" />  
 	<meta property="og:title" content="کۆلێژی تەکنیکی سۆران"/>  
