--- a/lezhna.html
+++ b/lezhna.html
@@ -116,45 +116,66 @@ tr:nth-child(even) {
 	<p style="text-align:right; margin-right:10px; margin-left:2px;"><span style="color:red; font-size:18px; float:right; margin:10px; line-height:2rem;"> لیژنەی تەندروستی و سەلامەتی کۆلیژ بۆ سالی ٢٠٢٢ </p>
 		<br>
 		<br>
-		<br>
+			<br>
+	<p style="text-align:right; margin-right:10px; margin-left:2px;"><span style="color:blue; font-size:12px; float:right; margin:10px; line-height:2rem;"> بۆ پەیوەنیدی کردن راستەوخۆ پەنجە لە ژمارەکان بدەن </p>
+	
+			<br>
 <table>
   <tr>
+    <th>ژمارەی مۆبایل</th>
     <th>پیشە</th>
     <th>ناو</th>
     <th>ژمارە</th>
    
   </tr>
   <tr>
-    <td>سەرۆکی لیژنە</td>
-    <td>هارون محمد خلیل</td>
+   <td><a href="tel:+9647504657035" style="text-decoration:none; color: black;">0750 465 7035</a></td>
+    <td>به‌رپرسی ته‌ندروستی و سلامه‌ت</td>
+    <td>راهین شریف حمد</td>
     <td>١</td>
     
   </tr>
     <tr>
-    <td>ئەندام </td>
-    <td>اسعد سید عبداللە</td>
+	 <td><a href="tel:+9647811791744" style="text-decoration:none; color: black;">0781 179 1744</a></td>
+    <td>مامۆستای یاریده‌ده‌ر</td>
+    <td>هیوا عبدالرحمن عولا</td>
     <td>٢</td>
-    
   </tr>
     <tr>
-    <td>ئەندام </td>
-    <td>هەڤرس عبدی بابکر</td>
-	<td>٣</td>
+	 <td><a href="tel:+9647504445014" style="text-decoration:none; color: black;">0750 444 5014</a></td>
+    <td>تێبینه‌ری هونه‌ری</td>
+    <td>حسن رشید طه‌</td>
+    <td>٣</td>
   </tr>
    <tr>
-    <td>ئەندام </td>
-    <td>زهرا حسن طە</td>
-	<td>٤</td>
+	 <td><a href="tel:+9647517578924" style="text-decoration:none; color: black;">0751 757 8924</a></td>
+    <td>تەندروستی كۆمه‌ل</td>
+    <td>كارزان عثمان احمد</td>
+    <td>٤</td>
   </tr>
    <tr>
-    <td>ئەندام </td>
-    <td>شەونم محمد</td>
-	<td>٥</td>
+	 <td><a href="tel:+9647831341638" style="text-decoration:none; color: black;">0783 134 1638</a></td>
+    <td>سه‌رۆكی پرۆگرامسازی</td>
+    <td>خدیجه‌ قادر حسن</td>
+    <td>٥</td>
   </tr>
    <tr>
-    <td>ئەندام </td>
-    <td>خدیجە</td>
-	<td>٦</td>
+	 <td><a href="tel:+964" style="text-decoration:none; color: black;"></a>----</td>
+    <td>ی.به‌رێوه‌به‌ری هونه‌ری‌</td>
+    <td>اسعد سید عبدالله‌ سیدعزیز</td>
+    <td>٦</td>
+  </tr>
+   <tr>
+	 <td><a href="tel:+964" style="text-decoration:none; color: black;">----</a></td>
+    <td>سه‌روكی پیشه‌یی</td>
+    <td>نزت سلیم ییحی</td>
+    <td>٧</td>
+  </tr>
+   <tr>
+	 <td><a href="tel:+9647504637893" style="text-decoration:none; color: black;">0750 463 7893</a></td>
+    <td>سه‌رۆكی شوفێران</td>
+    <td>عبدالله‌ سعید عبدالله‌</td>
+    <td>٨</td>
   </tr>
 </table>
 <br>
