--- a/ragraty.html
+++ b/ragraty.html
@@ -54,6 +54,39 @@
 		margin-left: 8px;
 		
 	}
+	
+#imm img{
+	 width:390px;
+	 border-radius: 20px;
+	 filter: drop-shadow(1px 1px 1px black);
+	 margin: auto;
+     padding: 10px;
+   
+
+}
+
+table {
+  font-family: 'K24KurdishBold-Bold';
+  border-collapse: collapse;
+  width: 96%;
+
+
+  color: black;
+  
+}
+
+td, th {
+color: black;
+  border: 1px solid red;
+  text-align: center;
+  padding: 8px;
+  font-size: 16px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+  color: black;
+}
 	</style>
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
@@ -187,19 +220,99 @@
 		<div id="bash2">
 	<p>  هۆبه‌ی تۆمار ئه‌ركو فه‌رمانه‌كانی به‌ پێ ڕێنه‌مایه‌كانی وه‌زاره‌تی خوێندنی باڵاو توێژینه‌وه‌ی زانستی جێبه‌جێ ده‌كات كه‌ له‌ رێگه‌ی گشتاندن یاخود رێنمایی یاخود فه‌رمانی زانكوی شۆرده‌بێته‌وه‌ بۆ توماری گشتی له‌ویش بۆ هۆبه‌ توماره‌كان. وە رایکردنی کاروباری قوتابیان وەک دروسکردنی ناسنامەی قوتابیان و پێدانی پشگیری بۆ کاری پێویست و رێکخستنی شهادەی قوتابیان و…… هتد </p>
 	</div>
-		<div id="bash1">
-	<p> : یه‌كه‌ی ئه‌ندازه‌- چاكردن </p>
-	</div>
-		<div id="bash2">
-	<p> یه‌كێكه‌ له‌ یه‌كه‌كانی كۆلێژی ته‌كنیكی سۆران، ئه‌و یه‌كه‌یه‌ سه‌رپه‌رشتی ته‌واوی پڕۆژه‌كانی ژێرخان له‌ كۆمه‌ڵگای كۆلێژ ده‌كات و، به‌دواداچوون بۆ كەموکورتیەکان  ده‌كاتن. یه‌كه‌ی ئه‌ندازه‌ كه‌ له‌لایه‌ن كۆمه‌ڵێك ئه‌ندازیار و فه‌رمانبه‌ری ئه‌ندازه‌یی سه‌رپه‌رشتی ده‌كرێت، به‌دواداچوون بۆ ئه‌و كه‌موكورتیانه‌ ده‌كه‌ن كه‌ له‌ باڵه‌خانه‌ و ڕێگا و با‌ن و پارك و...هیتد كۆمه‌ڵگای كۆلێژدا هه‌ن  </p>
-	</div>
+	
 		<div id="bash1">
 	<p> : هۆبه‌ی راگه‌یاندن و چالاكییه‌كان  </p>
 	</div>
 		<div id="bash2">
 	<p> ئه‌ هوبه‌یه‌ به‌ر پرسه‌ له‌سه‌رجه‌م كارو چالاكیه‌كانی ناووه‌و ده‌ره‌وه‌ی كولێژ، له‌ كاتی هه‌بوونی چالاكیه‌كان، گرنگترین كاره‌كانیان وه‌ك چالاكی وه‌رزشی، هونه‌ری، وینه‌گرت، خولی توپی پێێ ……هتد  </p>
 	</div>
-
+	<div id="bash1">
+	<p> : یه‌كه‌ی ئه‌ندازه‌- چاكردن </p>
+	</div>
+		<div id="bash2">
+	<p> یه‌كێكه‌ له‌ یه‌كه‌كانی كۆلێژی ته‌كنیكی سۆران، ئه‌و یه‌كه‌یه‌ سه‌رپه‌رشتی ته‌واوی پڕۆژه‌كانی ژێرخان له‌ كۆمه‌ڵگای كۆلێژ ده‌كات و، به‌دواداچوون بۆ كەموکورتیەکان  ده‌كاتن. یه‌كه‌ی ئه‌ندازه‌ كه‌ له‌لایه‌ن كۆمه‌ڵێك ئه‌ندازیار و فه‌رمانبه‌ری ئه‌ندازه‌یی سه‌رپه‌رشتی ده‌كرێت، به‌دواداچوون بۆ ئه‌و كه‌موكورتیانه‌ ده‌كه‌ن كه‌ له‌ باڵه‌خانه‌ و ڕێگا و با‌ن و پارك و...هیتد كۆمه‌ڵگای كۆلێژدا هه‌ن  </p>
+	</div>
+	<br>
+	<br>
+	  	 <p style="text-align:right; margin-right:10px; margin-left:2px;"><span style="color:red; font-size:18px;  margin:10px; line-height:2rem;">یەکەی ئەندازیاری  </p>
+	 <p style="text-align:right; margin-right:10px; margin-left:2px;"><span style="color:red; font-size:14px;  margin:10px; line-height:2rem;">بۆ پەیوەنیدی کردن راستەوخۆ پەنجە لە ژمارەکان بدەن</p>
+	 <br>
+		<center>
+<table>
+  <tr>
+     <th>ژمارەی تەلەفون</th>
+    <th>پیشە</th>
+    <th>ناو</th>
+    <th>ژمارە</th>
+   
+  </tr>
+      <tr>
+    <td><a href="tel:+9647504643789" style="text-decoration:none; color: black;"> 0750 464 3789 </a></td>
+     <td>بەرپرس</td>
+    <td> صالح زرار سلیمان</td>
+    <td>١</td>
+  </tr>  
+  <tr>
+    <td><a href="tel:+9647504619412" style="text-decoration:none; color: black;"> 0750 461 9412</a></td>
+     <td>بەرپرس</td>
+    <td> خسرۆ زێرۆ زێرۆ</td>
+    <td>٢</td>
+  </tr> 
+  <tr>
+    <td><a href="tel:+9647508587197" style="text-decoration:none; color: black;">0750 858 7197 </a></td>
+     <td>بەرپرس</td>
+    <td> سەرهەنگ وشیار</td>
+    <td>٣</td>
+  </tr>  
+  <tr>
+    <td><a href="tel:+9647511313233" style="text-decoration:none; color: black;"> 0751 131 3233</a></td>
+   <td>بەرپرس</td>
+    <td> سیداد اکرم</td>
+    <td>٤</td>
+  </tr>  
+  <tr>
+    <td><a href="tel:+9647504474291" style="text-decoration:none; color: black;">0750 447 4291 </a></td>
+     <td>فەرمانبەر</td>
+    <td> مظفر طە</td>
+    <td>٥</td>
+  </tr> 
+  <tr>
+    <td><a href="tel:+9647504637893" style="text-decoration:none; color: black;"> 0750 463 7893</a></td>
+   <td>فەرمانبەر</td>
+    <td> عبداللە سعید</td>
+    <td>٦</td>
+  </tr>  
+  <tr>
+    <td><a href="tel:+9647504794535" style="text-decoration:none; color: black;"> 0750 479 4535</a></td>
+    <td>فەرمانبەر</td>
+    <td> فرهاد خضر</td>
+    <td>٧</td>
+  </tr>  
+  <tr>
+    <td><a href="tel:+9647504960306" style="text-decoration:none; color: black;"> 0750 496 0306</a></td>
+    <td>فەرمانبەر</td>
+    <td>حمە علی صدرالدین</td>
+    <td>٨</td>
+  </tr>  
+  <tr>
+    <td><a href="tel:+9647504685317" style="text-decoration:none; color: black;">0750 468 5317 </a></td>
+    <td>فەرمانبەر</td>
+    <td>ولید محمد صالح</td>
+    <td>٩</td>
+  </tr>
+ 
+  
+</table>
+</center>
+	<br>
+	<br>
+	<center>
+	 <div id="imm">
+ <img src="images/andazyar.jpg">
+ 
+ </div>
+ </center>
     <div class="copyright">
         <div class="container">
             <div class="row">
