--- a/index.html
+++ b/index.html
@@ -316,8 +316,11 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="map-responsive">
+					<iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Soran Technical College کۆلێژی تەکنیکی سۆران‭&t=k&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+					
+							 <!--
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3199.0863152240395!2d44.52868321463717!3d36.696463681233126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4004295bb792162b%3A0x8d8fb9bee4d82355!2zU29yYW4gVGVjaG5pY2FsIEluc3RpdHV0ZSDZvtuV24zZhdin2Ybar9in24wg2Krbldqp2YbbjNqp24wg2LPbhtix2KfZhg!5e0!3m2!1sen!2siq!4v1661470944847!5m2!1sen!2siq" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                       
+                       -->
                     </div>
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
