--- a/index.html
+++ b/index.html
@@ -357,12 +357,13 @@
                            <p><a href="https://epu.edu.iq/" style="text-decoration:none; color:#1995A8;">زانکۆی پۆلیتەکنیکی هەولێر</a></p>
                            <p><a href="https://gov.krd/mohe/" style="text-decoration:none; color:#1995A8;">وەزارەتی خوێندنی باڵا و توێژینەوەی زانستی</a></p>
                            <p><a href="list.html" style="text-decoration:none; color:#1995A8 ;">بەشی قوتابیان</a></p>
-						  <p><a href="https://epu.edu.iq/ku/%D9%BE%DB%86%D9%84%DB%8C%D8%AA%DB%95%DA%A9%D9%86%DB%8C%DA%A9-%D9%85%DB%95%DA%AF%DB%95%D8%B2%DB%8C%D9%86/" style="text-decoration:none; color:#1995A8;">پۆلیتەکنیک مەگەزین</a></p>
+			   <p><a href="https://epu.edu.iq/ku/%D9%BE%DB%86%D9%84%DB%8C%D8%AA%DB%95%DA%A9%D9%86%DB%8C%DA%A9-%D9%85%DB%95%DA%AF%DB%95%D8%B2%DB%8C%D9%86/" style="text-decoration:none; color:#1995A8;">پۆلیتەکنیک مەگەزین</a></p>
                            <p><a href="https://equalization.digital.gov.krd/#/authentication/signin" style="text-decoration:none; color:#1995A8;">لیستی زانکۆ باوەرپێکراوەکان لە دەرەوەی وڵات</a></p>
-                           <p><a href="https://www.rwanga.org/" style="text-decoration:none; color:#1995A8 ;">دەزگای روانگە</a></p>
+                            <p><a href="logo.html" style="text-decoration:none; color:#1995A8 ;">لۆگۆی زانکۆی پۆلیتەکنیکی هەولێر</a></p>
+			  <p><a href="https://www.rwanga.org/" style="text-decoration:none; color:#1995A8 ;">دەزگای روانگە</a></p>
                            <p><a href="https://www.facebook.com/profile.php?id=100063709904570&mibextid=LQQJ4d" style="text-decoration:none; color:#1995A8 ;">clad center - سەنتەری زمانی ئینگلیزی</a></p>
-						   <p><a href="https://bcf.krd/" style="text-decoration:none; color:#1995A8 ;">دەزگای خێرخوازی بارزانی</a></p>
-						   <p><a href="https://accounts.google.com/signin/v2/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ltmpl=default&hd=epu.edu.iq&service=mail&sacu=1&rip=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin&hl=en-GB" style="text-decoration:none; color:#1995A8 ;">بەشی ئیمێلی سیستەم</a></p>
+			   <p><a href="https://bcf.krd/" style="text-decoration:none; color:#1995A8 ;">دەزگای خێرخوازی بارزانی</a></p>
+			  <p><a href="https://accounts.google.com/signin/v2/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ltmpl=default&hd=epu.edu.iq&service=mail&sacu=1&rip=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin&hl=en-GB" style="text-decoration:none; color:#1995A8 ;">بەشی ئیمێلی سیستەم</a></p>
                            <p><a href="https://translate.google.com/" style="text-decoration:none; color:#1995A8 ;">وەرگێر</a></p>
                           
                            
