--- a/prsga.html
+++ b/prsga.html
@@ -159,7 +159,7 @@ tr:nth-child(even) {
 	<td>٤</td>
   </tr>
    <tr>
-    <td><a href="tel:+964" style="text-decoration:none; color: black;"> 078146440</a></td>
+    <td><a href="tel:+9647814644031" style="text-decoration:none; color: black;">0781 464 4031</a></td>
     <td>عدنان فخرالدین ویسی</td>
 	<td>٥</td>
   </tr>
