--- a/lezhna.html
+++ b/lezhna.html
@@ -88,7 +88,7 @@ tr:nth-child(even) {
 						<a class="dropdown-item" href="lezhna.html"><span style="font-family:'K24KurdishBold-Bold'; class="item-text">لیژنەی سەلامەتی</span></a>
 						<a class="dropdown-item" href="smstar.html"><span style="font-family:'K24KurdishBold-Bold'; class="item-text">وانەکان</span></a>
 						 <a class="dropdown-item" href="https://moodle.epu.edu.iq/login/index.php"><span style="font-family:'K24KurdishBold-Bold'; class="item-text">بینینی وانەکان</span></a>
-                        <a class="dropdown-item" href="https://bologna.epuit.net/adminects/"><span style="font-family:'K24KurdishBold-Bold'; class="item-text">بینینی ئەنجامەکان</span></a>
+                        <a class="dropdown-item" href="https://bologna.epu.edu.iq/adminects/"><span style="font-family:'K24KurdishBold-Bold'; class="item-text">بینینی ئەنجامەکان</span></a>
                         <a class="dropdown-item" href="feedback.html"><span style="font-family:'K24KurdishBold-Bold'; class="item-text">فیدباکی قوتابیان</span></a>
                    <a class="dropdown-item" href="wana.html"><span style="font-family:'K24KurdishBold-Bold'; class="item-text">ڤیدیۆی فێرکاری وانەکان</span></a>
                         <a class="dropdown-item" href="qutabyan.html"><span style="font-family:'K24KurdishBold-Bold'; class="item-text">لیژنەی قوتابیان</span></a>
