--- a/zeatr.html
+++ b/zeatr.html
@@ -70,7 +70,7 @@
 						<a class="dropdown-item" href="lezhna.html"><span style="font-family:'K24KurdishBold-Bold'; class="item-text">لیژنەی سەلامەتی</span></a>
 						<a class="dropdown-item" href="smstar.html"><span style="font-family:'K24KurdishBold-Bold'; class="item-text">وانەکان</span></a>
 						 <a class="dropdown-item" href="https://moodle.epu.edu.iq/login/index.php"><span style="font-family:'K24KurdishBold-Bold'; class="item-text">بینینی وانەکان</span></a>
-                        <a class="dropdown-item" href="https://bologna.epu.edu.iq/adminects/"><span style="font-family:'K24KurdishBold-Bold'; class="item-text">بینینی ئەنجامەکان</span></a>
+                        <a class="dropdown-item" href="https://bologna.epuit.net/adminects/"><span style="font-family:'K24KurdishBold-Bold'; class="item-text">بینینی ئەنجامەکان</span></a>
                         <a class="dropdown-item" href="feedback.html"><span style="font-family:'K24KurdishBold-Bold'; class="item-text">فیدباکی قوتابیان</span></a>
                    <a class="dropdown-item" href="wana.html"><span style="font-family:'K24KurdishBold-Bold'; class="item-text">ڤیدیۆی فێرکاری وانەکان</span></a>
                         <a class="dropdown-item" href="qutabyan.html"><span style="font-family:'K24KurdishBold-Bold'; class="item-text">لیژنەی قوتابیان</span></a>
@@ -94,13 +94,29 @@
    <br>
    <center>
       <span style="font-size:16px;line-height: 2; color:black; text-align:right;">ئایا ئەنجامەکان چۆن حیساب دەکرێن ؟</span><br>
-                    <span style="font-size:16px; color:black; text-decoration:none;">  <a style="text-decoration:none; color:#1995A8 ;" href="anjam.pdf"> ئەنجامەکان</a></span><br>
+                    <span style="font-size:16px; color:black; text-decoration:none;">  <a style="text-decoration:none; color:#1995A8 ;" href="anjam.pdf"> بینین</a></span><br>
 					 
    
    <br>
-					      <span style="font-size:16px;line-height: 2; color:black; text-align:right;">لیستی خواردن و خواردنەوەکانی کۆلێژی تەکنیکی سۆران</span><br>
-                    <span style="font-size:16px; color:black; text-decoration:none;">  <a style="text-decoration:none; color:#1995A8 ;" href="kaftrya.pdf"> کافتریا</a></span><br>
-	 </center>
+		<span style="font-size:16px;line-height: 2; color:black; text-align:right;">لیستی خواردن و خواردنەوەکانی کۆلێژی تەکنیکی سۆران</span><br>
+       <span style="font-size:16px; color:black; text-decoration:none;">  <a style="text-decoration:none; color:#1995A8 ;" href="kaftrya.pdf"> بینین</a></span><br>
+	 
+   <br>
+		<span style="font-size:16px;line-height: 2; color:black; text-align:right;">مۆلەتی کاتی فەرمانبەران</span><br>
+       <span style="font-size:16px; color:black; text-decoration:none;">  <a style="text-decoration:none; color:#1995A8 ;" href="molat.docx"> دابەزاندن </a></span><br>
+	
+	 
+   <br>
+		<span style="font-size:16px;line-height: 2; color:black; text-align:right;">مۆلەتی رۆژی فەرمانبەران</span><br>
+       <span style="font-size:16px; color:black; text-decoration:none;">  <a style="text-decoration:none; color:#1995A8 ;" href="molatyasae.docx"> دابەزاندن </a></span><br>
+	 
+   <br>
+		<span style="font-size:16px;line-height: 2; color:black; text-align:right;"> نموونەیەک لە سیڤی ئەتوانن کاری پێبکەن</span><br>
+       <span style="font-size:16px; color:black; text-decoration:none;">  <a style="text-decoration:none; color:#1995A8 ;" href="cv.docx">دابەزاندن</a></span><br>
+	
+
+
+	</center>
 	<br>
 	<br><br>
 	<br><br>
