--- a/bash.html
+++ b/bash.html
@@ -212,7 +212,7 @@
                         </div> <!-- end of image-wrapper -->
                         <p class="p-large"><strong>بەشی تەکنەلۆجیای زانیاری</strong></p>
                         </div> 
-					<p style="color:blue; margin-left:10px; font-family: 'K24KurdishBold-Bold'; margin-right:10px; font-size:16px; text-align:right;">ئامانج لێی پێگەیاندنی ستافیکی تەکنیکی و فێربوونی بپرۆگرامەکانی کۆمپیوتەر و زمانەکانی کۆمپیوتەر لە ماوەی خویندنی ئەم دوو سالە قوتابیان دەبنە خاوەن بروانامای دیبلۆم . دەرچوانی ئەم بەشە رۆلێکی گرینگیان هەیە لە بواری دروست کردنی پرۆگرامەکان و کارکردنیان لە کۆمپانیا و کەنالەکان  . قوتابیان لەم سالانەی خونێندیاندا وانەکان بە تیۆریی و پراکتیکی و سەردانی کردنیان بۆ کەنالەکان و کۆلێژە تەکنەلۆژیایەکان . بۆ بە تەکنیکی بونی قوتابی و فیربوون و وەرگرتنی زانیاری زیاتر لە بوارەکەیان . وە ئەنجام دانی خولی مەشقی هاوینەی دوو مانگە دوای تەواوکردنی قوناغی دووەم بۆ  تەواو بوونی پسپۆریان لەم بوارە</p>
+					<p style="color:blue; margin-left:10px; font-family: 'K24KurdishBold-Bold'; margin-right:10px; font-size:16px; text-align:right;">ئامانج لێی پێگەیاندنی ستافیکی تەکنیکی و فێربوونی پرۆگرامەکانی کۆمپیوتەر و زمانەکانی کۆمپیوتەر لە ماوەی خویندنی ئەم دوو سالە قوتابیان دەبنە خاوەن بروانامای دیبلۆم . دەرچوانی ئەم بەشە رۆلێکی گرینگیان هەیە لە بواری دروست کردنی پرۆگرامەکان و کارکردنیان لە کۆمپانیا و کەنالەکان  . قوتابیان لەم سالانەی خونێندیاندا وانەکان بە تیۆریی و پراکتیکی و سەردانی کردنیان بۆ کەنالەکان و کۆلێژە تەکنەلۆژیایەکان . بۆ بە تەکنیکی بونی قوتابی و فیربوون و وەرگرتنی زانیاری زیاتر لە بوارەکەیان . وە ئەنجام دانی خولی مەشقی هاوینەی دوو مانگە دوای تەواوکردنی قوناغی دووەم بۆ  تەواو بوونی پسپۆریان لەم بوارە</p>
 						<hr width="80%" color="black">
 						<div class="team-member">
                         <div class="image-wrapper">
@@ -222,7 +222,7 @@
                         
 						 </div> 
 						 <p style="color:blue; margin-left:10px; font-family: 'K24KurdishBold-Bold'; margin-right:10px; font-size:16px; text-align:right;">
-له‌سه‌ر بڕیاری سه‌روكایه‌تی ده‌سته‌ی په‌یمانگا ته‌كنیكیه‌كان به‌شی به‌ڕیۆبردنی كار له‌ ساڵی خوێندنی ( ٢٠٠٤ – ٢٠٠٥ ) كرایه‌وه‌، ئامانجی ئه‌م به‌شه‌ ئه‌وه‌یه‌ كه‌ بتوانی كۆمه‌ڵێك قوتابی پێبگه‌یه‌نێن وه‌ك كادیری به‌رێوبڕدن، پێشكه‌ش به‌ ره‌وتی به‌ره‌وپێش بردنی كۆمه‌ڵگای‌ كوردستان بكات. بێگومان كوردستان له‌ قوناغی ئاوادانكردنه‌وه‌و و گه‌شه‌كردندایه‌ پێو‌یستی به‌ كادیری لیهاتووی به‌رێوبڕدن هه‌یه‌، ده‌رچوانی ئه‌م به‌شه‌ شاره‌زایه‌كی ته‌واویان هه‌یه له‌ به‌ڕێوبردنی داموده‌زگاكانی میری و تایبه‌تی ده‌توانن سه‌رپه‌رشتی هه‌ر پرۆژه‌یه‌ك بكه‌ن بۆ ئه‌وه‌ی سه‌ركه‌وتوانه‌ به‌ڕێوه‌بچێت.
+له‌سه‌ر بڕیاری سه‌روكایه‌تی ده‌سته‌ی په‌یمانگا ته‌كنیكیه‌كان به‌شی بەرێوەبردنی كار له‌ ساڵی خوێندنی ( ٢٠٠٤ – ٢٠٠٥ ) كرایه‌وه‌، ئامانجی ئه‌م به‌شه‌ ئه‌وه‌یه‌ كه‌ بتوانی كۆمه‌ڵێك قوتابی پێبگه‌یه‌نێن وه‌ك كادیری به‌رێوبڕدن، پێشكه‌ش به‌ ره‌وتی به‌ره‌وپێش بردنی كۆمه‌ڵگای‌ كوردستان بكات. بێگومان كوردستان له‌ قوناغی ئاوادانكردنه‌وه‌و و گه‌شه‌كردندایه‌ پێو‌یستی به‌ كادیری لیهاتووی به‌رێوبڕدن هه‌یه‌، ده‌رچوانی ئه‌م به‌شه‌ شاره‌زایه‌كی ته‌واویان هه‌یه له‌ به‌ڕێوبردنی داموده‌زگاكانی میری و تایبه‌تی ده‌توانن سه‌رپه‌رشتی هه‌ر پرۆژه‌یه‌ك بكه‌ن بۆ ئه‌وه‌ی سه‌ركه‌وتوانه‌ به‌ڕێوه‌بچێت.
 </p>
 					</center>
     <!-- Copyright -->
