--- a/renmay.html
+++ b/renmay.html
@@ -177,7 +177,7 @@ tr:nth-child(even) {
 	</center>
 	<hr width="80%" color="black">
  <header>
-  <p> به‌ناوی ڕاگرایه‌تی کۆلێژی تەکنیکی سۆران، پیرۆزبایی له‌ قوتابییانی تازه‌ وه‌رگیراو له‌ گشت به‌شه‌كان بۆ ساڵی نوێی خوێندنی ده‌كه‌ین، هیوادارین هه‌ر سه‌ركه‌وتوو بن </p>
+  <p> به‌ناوی ڕاگرایه‌تی کۆلێژی تەکنیکی سۆران، پیرۆزبایی له‌ قوتابییانی تازه‌ وه‌رگیراو له‌ گشت به‌شه‌كان بۆ ساڵی نوێی خوێندن ده‌كه‌ین، هیوادارین هه‌ر سه‌ركه‌وتوو بن </p>
  </header>
  <br>
  <marquee direction="right" Scrolldelay="120"> ئاگاداری قوتابیە خۆشەویستەکان دەکەینەوە بۆ پرۆسه‌ى تۆمار كردن له‌ کۆلێژەکەمان  پێویسته‌ قوتابیان ئەم‌ پێداويستيانەی خوارەوە لەگەڵ خۆیان بهێنن‌ </marquee>
